# llvm-starter

./: CMakeLists.txt  README.md  main.cpp
